# pyfa-converter

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: build.yml  pytest.yml
examples/: main.py  models.py
pydantic_fastapi_converter/: utils.py
pyfa_converter/: __init__.py  depends.py  main.py  utils.py
pyfa_converter/utils/: deprecation.py  deprecation_message.py
tests/: body_test.py  conftest.py  form_test.py  query_test.py
