[tool.poetry]
name = "pyfa-converter"
version = "0.1.0"
description = "Pydantic to fastapi model converter."
authors = ["dotX12 <dev@shitposting.team>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.75.1"
pydantic = "^1.9.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
